syntax = "proto3";
package com.xabe.vehicle.update;

import "vehicle_id.proto";

option java_package = "com.xabe.vehicle.api.grpc.update.updatevehiclebasicinfo";

message UpdateVehicleBasicRequest {

  com.xabe.vehicle.VehicleId id = 1;

  int64 timestamp = 2;

  string store_id = 3;

  string category = 4;

  string brand = 5;

  string model = 6;
}