syntax = "proto3";
package com.xabe.vehicle.update;

import "vehicle_id.proto";

option java_package = "com.xabe.vehicle.api.grpc.update.updatevehicleprice";

message UpdateVehiclePriceRequest {

  com.xabe.vehicle.VehicleId id = 1;

  int64 timestamp = 2;

  string store_id = 3;

  message Price {

    int64 price = 1;

    int32 discount = 2;
  }

  message Prices {

    string currency_code = 1;

    repeated Price prices = 2;
  }

  Prices prices = 4;

}